--- a/auricle.html
+++ b/auricle.html
@@ -1,6 +1,7 @@
 <head>
   <title>Auricle</title>
   <link rel="icon" type="image/png" href="/favicon.png">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
